--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <titele>Web page #1!</title>
+    <title>Web page #1!</title>
   </head>
   <body>
     <h1>My first web page</h1>
@@ -10,7 +10,7 @@
     <p>This is my first web page!</p>
     <p>Isn't it nice?</p>
 
-    <p>Here are some things I'm going to learn about coding:</P>
+    <p>Here are some things I'm going to learn about coding:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
